Fix background centering with border radius

Optimized background painting uses the border clip rect when there
are rounded corner, but this rect is not the inner border rect when
we are doing bleed avoidance. In such cases anything relying on
background position will paint the image in the wrong place (offset by
half the border thickness).

This patch disables optimized backgrounds when employing bleed
avoidance by dest rect shrinkage. It also enables the optimization
when there are no images and adds a TODO regarding dest rect adjustemnt
in the no-repeat background case.

Bug: 919197
Change-Id: I5b9f4f512bc52a33d0b74d25e3f015e5dd8ff58c
Reviewed-on: https://chromium-review.googlesource.com/c/1403614
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621356}
Former-commit-id: 70e7e5ac77bef3aab6c88d8d1caf568b49ffe105